<resources>
    <string name="app_name">BB App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="btn1_text">SPOTIFY STREAMER</string>
    <string name="btn2_text">SCORES APP</string>
    <string name="btn3_text">LIBRARY APP</string>
    <string name="btn4_text">BUILD IT BIGGER</string>
    <string name="btn5_text">XYZ READER</string>
    <string name="btn6_text">CAPSTONE: BBs APP</string>
</resources>
