<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView android:text="BB&apos;s Nanodegree Apps!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn1_text"
            android:id="@+id/btn1"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:onClick="btn1Toast"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn2_text"
            android:id="@+id/btn2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:onClick="btn2Toast"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn3_text"
            android:id="@+id/btn3"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:onClick="btn3Toast"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn4_text"
            android:id="@+id/btn4"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".1"
            android:onClick="btn4Toast"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn5_text"
            android:id="@+id/btn5"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".1"
            android:onClick="btn5Toast"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn6_text"
            android:id="@+id/btn6"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".1"
            android:onClick="btn6Toast"/>
    </LinearLayout>
</RelativeLayout>
